@@ -1,3 +1,7 @@
+22 February 2008: Wouter
+	- +2% for recursions, if identical queries (except for destination
+	  and query ID) in the reply list, avoid re-encoding the answer.
+
 21 February 2008: Wouter
 	- speedup of root-delegation message encoding by 15%.
 	- minor speedup of compress tree_lookup, maybe 1%.
